# eyegway

./: .coveragerc  .flake8  .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: release.yml
dockerfiles/: Dockerfile_eyegway  Dockerfile_eyegway_full  Dockerfile_eyegway_webui  README.md  full.eyegway.Dockerfile  full.eyegway.Dockerfile.dockerignore  server.eyegway.Dockerfile  server.eyegway.Dockerfile.dockerignore  webui.eyegway.Dockerfile  webui.eyegway.Dockerfile.dockerignore
examples/: example.py
examples/hubs/: README.md  example.py  example_async.py  example_sync.py  live_monitor.py
examples/hubs_bridge/: example.py
examples/pipelime/: example.py  sender.py
examples/playground/hubs_bridge/: example.py
examples/playground/launch_web/: web.py
examples/playground/rest_python_client/: client_example.py
examples/plots/: README.md  advanced_multi.py  advanced_multi_async.py  advanced_single.py  advanced_single_async.py  basic.py  multi_plot_moving.py  multi_trace.py  single_plot_moving.py  single_trace.py
examples/plots/basic_plots/: 3d_scatter.json  bar_colors.json  chart_blue.json  chart_red.json
examples/rest/: client_example.py  example.py
examples/web/eyegway-svelte/: .gitignore  package-lock.json  package.json
examples/web/eyegway-svelte/src/: app.html
examples/web/eyegway-svelte/src/lib/: index.ts
examples/web/eyegway-svelte/src/routes/: +page.svelte
examples/webui/: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
examples/webui/src/: app.html
examples/webui/src/lib/components/: Item.svelte  ItemPlaceholder.svelte  PointCloudViewer.svelte  PointCloudViewer3D.svelte  TPointCloud.svelte
examples/webui/src/routes/: +page.svelte  page[old].svelte
eyegway/: __init__.py  __main__.py  commons.py  communication.py  hubs.py  packaging.py  utils.py
eyegway/cli/: hubs.py  main.py  packer.py  streams.py
eyegway/communication/: async_channels.py  async_variables.py  channels.py  variables.py
eyegway/hubs/: __init__.py  asyn.py  sync.py
eyegway/hubs/connectors/: __init__.py  pipelime.py
eyegway/hubs/rest/: api.py
eyegway/hubs/viewers/: __init__.py  keys.py
eyegway/packers/: __init__.py  factory.py  images.py  numpy.py
eyegway/rest/: hubs.py
eyegway/utils/: __init__.py  generators.py  logging.py  plotting.py
tests/eyegway/: conftest.py  test_communication.py  test_hubs.py  test_numpy.py  test_packaging.py  test_utils.py
tests/eyegway/communication/: test_async.py  test_sync.py
tests/eyegway/hubs/: test_hubs.py  test_hubs_async.py  test_hubs_sync.py
tests/eyegway/hubs/rest/: test_hub_api.py
tests/eyegway/hubs/viewers/: __init__.py  test_viewers.py
tests/eyegway/packers/: commons.py  test_factory.py  test_numpy.py
tests/eyegway/utils/: test_generators.py  test_plotting.py
web/eyegway-svelte/: .env.example  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
web/eyegway-svelte/public/themes/: ayu_mirage.json  dark.json  default.json  dracula.json  monokai_pro.json  one_dark_pro.json
web/eyegway-svelte/src/: app.html
web/eyegway-svelte/src/lib/: Eyegway.ts  Parameters.ts  Stores.ts  index.ts
web/eyegway-svelte/src/routes/: +layout.svelte  +page.server.js  +page.svelte
web/eyegway-svelte/static/css/: style.css
web/eyegway-svelte/static/js/: themeUpdate.js
web/eyegway-svelte/static/layouts/: 2x2.json  empty.json
web/eyegway-svelte/static/themes/: ayu_light.json  ayu_mirage.json  dracula.json  monokai_pro.json  one_dark_pro.json
(+85 files in other folders)
